--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <title>Shreesaran — Portfolio</title>
   <meta name="description" content="Personal portfolio of [Your Name]." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="stylesheet" href="d.css">
+  <link rel="stylesheet" href="portfolio.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
